--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -36,7 +36,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:maxLines="5"
+            android:ellipsize="end"
+            android:maxLines="4"
             app:layout_constraintStart_toEndOf="@+id/image_poster"
             app:layout_constraintTop_toBottomOf="@+id/text_title"
             app:layout_constraintEnd_toEndOf="parent"
